<resources>
    <string name="app_name">Contactos</string>
    <string name="buscar_contacto">Buscar contacto...</string>
    <string name="cambiar_vista">Cambiar vista</string>
    <string name="nuevo_contacto">Nuevo contacto</string>
    <string name="marisela_savedra">Marisela savedra</string>
    <string name="wm">Wm</string>
    <string name="edad">Edad</string>
    <string name="peso">Peso</string>
    <string name="telefono">Telefono</string>
    <string name="_25">25 años</string>
    <string name="_80">80 kg</string>
    <string name="_3123241543">3123241543</string>
    <string name="email">Email</string>
    <string name="cflorez_gmail_com">cflorez@gmail.com</string>
    <string name="direccion">Direccion</string>
    <string name="calle_20_n_3_a">calle 20 n 3 a</string>
    <string name="saavedra">saavedra</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="empresa">Empresa</string>
    <string name="eliminar_contacto">Eliminar contacto</string>
    <string name="editar_contacto">Editar contacto</string>
</resources>
